# Unilang

./: .gitignore  BUILD_MACOS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: android-build.yml  build.yml  ios-build.yml  linux-test-build.yml  macos-test-build.yml
android/: README.md  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aicua/unilang/: MainActivity.kt  PatternMatcher.kt  ShortcutsDict.kt  UniLangIME.kt
android/app/src/main/res/layout/: activity_main.xml  keyboard_view.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: method.xml  qwerty.xml
config/: shortcuts.json
experiments/Aicua_SR/: .gitignore  README.md  requirements.txt  run_pipeline.sh
experiments/Aicua_SR/.github/workflows/: generate-dataset.yml  test.yml  train-sr-models.yml
experiments/Aicua_SR/configs/: rose_definition.yaml  sr_config.yaml
experiments/Aicua_SR/data/models/: .gitkeep  all_discovered_formulas.json  training_log.json
experiments/Aicua_SR/data/models/sr_animation_params/: all_formulas.json  amplitude.json  damping_factor.json  frequency.json  phase_offset.json
experiments/Aicua_SR/data/models/sr_bone_rigging/: all_formulas.json  bind_weight.json  bone_count.json  bone_length.json  joint_spacing.json
experiments/Aicua_SR/data/models/sr_petal_geometry/: all_formulas.json  base_width.json  curvature.json  length.json  thickness.json  twist_angle.json
experiments/Aicua_SR/data/processed/: animation_params.csv  bone_rigging.csv  petal_geometry.csv
experiments/Aicua_SR/examples/: rose_cli_example_1.txt  rose_cli_example_2.txt
experiments/Aicua_SR/scripts/: codegen_formulas.py  generate_rose_cli.py  generate_rose_dataset.py  train_sr_models.py
experiments/Aicua_SR/tests/: __init__.py  test_dataset_generation.py  test_discovered_formulas.py
ios/: Package.swift  README.md
ios/Sources/: PatternMatcher.swift  ShortcutsDict.swift
src/: UniLang.rc  auto_updater.cpp  auto_updater.h  help_window.cpp  help_window.h  keyboard_hook.cpp  keyboard_hook.h  main.cpp  pattern_matcher.cpp  pattern_matcher.h  popup_window.cpp  popup_window.h  resource.h  settings_manager.cpp  settings_manager.h  shortcuts_dict.cpp  shortcuts_dict.h  text_replacer.cpp  text_replacer.h  update_manager.cpp  update_manager.h  version.h.in
src/platform/: platform_interface.h  platform_types.h
src/platform/linux/: keyboard_hook_linux.cpp  keyboard_hook_linux.h  main_linux.cpp  platform_factory_linux.cpp  text_input_linux.cpp  text_input_linux.h
src/platform/macos/: keyboard_hook_macos.h  keyboard_hook_macos.mm  main_macos.mm  platform_factory_macos.mm  text_input_macos.h  text_input_macos.mm
